# python_itmo

./: LICENSE
hw_1/: pyproject.toml  simple_nl.py  simple_tail.py  simple_wc.py
hw_1/artifacts/: terminal_cmds.txt
hw_2/: Dockerfile  generate_table_example.py  test.py
hw_2/artifacts/: generated_document.tex  link.txt
hw_3/: brute_force.py  pyproject.toml  run.py  run2.py  run3.py
hw_3/artifacts/: B.txt  C.txt  CD.txt  get_set.txt
hw_3/matrix_lib/: core.py  hash_mixin.py  matrix_v2.py
hw_4/: fib.py  integrate.py  pyproject.toml  task_3.py
hw_4/artifacts/: task_1.txt  task_2.txt  task_3.txt
