[project]
name = "matrix-lib"
version = "0.1.0"
description = ""
authors = [
    {name = "pm",email = "pedromik@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.8"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.26.0"  # Добавлено, если будет использоваться



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
